...
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="Imagenes - Proyecto Apolo"
        android:textColor="#853A3A"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/searchViewImgs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreIngresado" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchViewImgs"
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="2dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewImgsApolo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTituloImgs" />

    <androidx.recyclerview.widget.RecyclerView
...
