...
        android:text="ID de Usuario:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPhotoUser" />

    <TextView
        android:id="@+id/textViewNombreCompleto"
        android:layout_width="351dp"
        android:layout_height="22dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="Nombre Completo: "
...
        android:text="Estado de Usuario:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorreoE" />

    <Button
        android:id="@+id/btnRegresarEnPerfilUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="#BC4307"
        android:text="Regresar"
...
